# ImGui-FileDialog

./: CMakeLists.txt  README.md
src/: imgui_filedialog.cpp  imgui_filedialog.h  imgui_filedialog.pc.in  string_utils.h
